--- a/Arduino-vMix-Tally/platformio.ini
+++ b/Arduino-vMix-Tally/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
-lib_deps = adafruit/Adafruit NeoPixel@^1.10.0
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.10.0
+	me-no-dev/ESP Async WebServer@^1.2.3
