--- a/Arduino-vMix-Tally/platformio.ini
+++ b/Arduino-vMix-Tally/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.10.0
 	me-no-dev/ESP Async WebServer@^1.2.3
+	ayushsharma82/AsyncElegantOTA@^2.2.6
+	me-no-dev/ESPAsyncTCP@^1.2.2
